# tgwtf

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile  MANIFEST.in  Makefile  README.md  nginx.conf  setup.py  testpackets.txt
aprslib/: IS.py  parsing.py
dfaprs/: README.md  __init__.py  dfaprs-upstartd.conf  handler.py  install.py  main.py  mapclient.py  parser.pl  setup.py
dfaprs/test/: DISCOF-rawtrace.txt  make-tests.py
etc/: run_tgwtf_service.sh  tgwtf.service.conf  tgwtf_deploy_id_rsa  tgwtf_deploy_id_rsa.pub
etc/xdg/openbox/: autostart
src/: logger.rs  main.rs  webui.rs
src/data/: mod.rs  model.rs
src/data/formats/: aprs.rs  geojson.rs  mod.rs
src/data/stores/: aprs_is.rs  aprs_log.rs  aprs_serial.rs  mod.rs
src/www/: index.html  liveplaya.min.js
test/: parse-packet.py  sample-raw.txt  tinysample-raw.txt  validate-log.py
www/: index.html  index.html.bk  liveplaya.debug.js  liveplaya.min.js
www/assets/: brcmap.debug.js  brcmap.min.js
