[package]
name = "tgwtf"
version = "0.1.2"
authors = ["Dmitry Azovtsev <dmitry@azovtsev.com>"]

[dependencies]
ansi_term = "0.11.0"
atty = "0.2.10"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
handlebars = "0.32.4"
log = { version = "0.4.1", features = ['std'] }
failure="0.1"
serde = "1"
serde_json = "1"
serial = "0.4"
actix-web = "0.6"
fap = "0.2"
aprs = "0.3"

